objects/vlocity_cmt__BusinessSiteOffering__c.object
<CustomObject>
    <description>Store offerings enable you to describe the different types of services available at a given store location such as bill payment and equipment returns, but could also represent products generally available at that store.</description>
    <fields>
        <fullName>vlocity_cmt__BusinessSiteId__c</fullName>
        <label>Store Location</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipLabel>Store Offerings</relationshipLabel>
        <relationshipName>SiteServicesProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Store Offerings</relationshipLabel>
        <relationshipName>SiteServicesProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductName__c</fullName>
        <formula>vlocity_cmt__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Store Offering</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>